src/test/ui/rfc-2497-if-let-chains/disallowed-positions.stderr
error: expected one of `,` or `>`, found `&&`
  --> $DIR/disallowed-positions.rs:248:14
   |
LL |         true && let 1 = 1
   |              ^^ expected one of `,` or `>` here

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:32:9
   |
LL |     if &let 0 = 0 {}
   |         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:35:9
   |
LL |     if !let 0 = 0 {}
   |         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:36:9
   |
LL |     if *let 0 = 0 {}
   |         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:38:9
   |
LL |     if -let 0 = 0 {}
   |         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:47:9
   |
LL |     if (let 0 = 0)? {}
   |         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:52:16
   |
LL |     if true || let 0 = 0 {}
   |                ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:53:17
   |
LL |     if (true || let 0 = 0) {}
   |                 ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:54:25
   |
LL |     if true && (true || let 0 = 0) {}
   |                         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:55:25
   |
LL |     if true || (true && let 0 = 0) {}
   |                         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:58:12
   |
LL |     if x = let 0 = 0 {}
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:61:15
   |
LL |     if true..(let 0 = 0) {}
   |               ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:63:11
   |
LL |     if ..(let 0 = 0) {}
   |           ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:65:9
   |
LL |     if (let 0 = 0).. {}
   |         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:69:8
   |
LL |     if let Range { start: _, end: _ } = true..true && false {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:73:8
   |
LL |     if let Range { start: _, end: _ } = true..true || false {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:80:8
   |
LL |     if let Range { start: F, end } = F..|| true {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:88:8
   |
LL |     if let Range { start: true, end } = t..&&false {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:94:19
   |
LL |     if let true = let true = true {}
   |                   ^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:98:12
   |
LL |     while &let 0 = 0 {}
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:101:12
   |
LL |     while !let 0 = 0 {}
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:102:12
   |
LL |     while *let 0 = 0 {}
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:104:12
   |
LL |     while -let 0 = 0 {}
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:113:12
   |
LL |     while (let 0 = 0)? {}
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:118:19
   |
LL |     while true || let 0 = 0 {}
   |                   ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:119:20
   |
LL |     while (true || let 0 = 0) {}
   |                    ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:120:28
   |
LL |     while true && (true || let 0 = 0) {}
   |                            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:121:28
   |
LL |     while true || (true && let 0 = 0) {}
   |                            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:124:15
   |
LL |     while x = let 0 = 0 {}
   |               ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:127:18
   |
LL |     while true..(let 0 = 0) {}
   |                  ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:129:14
   |
LL |     while ..(let 0 = 0) {}
   |              ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:131:12
   |
LL |     while (let 0 = 0).. {}
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:135:11
   |
LL |     while let Range { start: _, end: _ } = true..true && false {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:139:11
   |
LL |     while let Range { start: _, end: _ } = true..true || false {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:146:11
   |
LL |     while let Range { start: F, end } = F..|| true {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:154:11
   |
LL |     while let Range { start: true, end } = t..&&false {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:160:22
   |
LL |     while let true = let true = true {}
   |                      ^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:174:6
   |
LL |     &let 0 = 0;
   |      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:176:6
   |
LL |     !let 0 = 0;
   |      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:177:6
   |
LL |     *let 0 = 0;
   |      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:179:6
   |
LL |     -let 0 = 0;
   |      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:188:6
   |
LL |     (let 0 = 0)?;
   |      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:193:13
   |
LL |     true || let 0 = 0;
   |             ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:194:14
   |
LL |     (true || let 0 = 0);
   |              ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:195:22
   |
LL |     true && (true || let 0 = 0);
   |                      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:198:9
   |
LL |     x = let 0 = 0;
   |         ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:200:12
   |
LL |     true..(let 0 = 0);
   |            ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:201:8
   |
LL |     ..(let 0 = 0);
   |        ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:202:6
   |
LL |     (let 0 = 0)..;
   |      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:204:6
   |
LL |     (let Range { start: _, end: _ } = true..true || false);
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:208:6
   |
LL |     (let true = let true = true);
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:208:17
   |
LL |     (let true = let true = true);
   |                 ^^^^^^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:213:6
   |
LL |     &let 0 = 0
   |      ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:224:17
   |
LL |         true && let 1 = 1
   |                 ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:230:17
   |
LL |         true && let 1 = 1
   |                 ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

error: `let` expressions are not supported here
  --> $DIR/disallowed-positions.rs:236:17
   |
LL |         true && let 1 = 1
   |                 ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if`- and `while`-expressions
   = note: as well as when nested within `&&` and parenthesis in those conditions

warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/disallowed-positions.rs:20:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `let_chains` is incomplete and may cause the compiler to crash
  --> $DIR/disallowed-positions.rs:22:12
   |
LL | #![feature(let_chains)] // Avoid inflating `.stderr` with overzealous gates in this test.
   |            ^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:32:8
   |
LL |     if &let 0 = 0 {}
   |        ^^^^^^^^^^ expected bool, found &bool
   |
   = note: expected type `bool`
              found type `&bool`

error[E0614]: type `bool` cannot be dereferenced
  --> $DIR/disallowed-positions.rs:36:8
   |
LL |     if *let 0 = 0 {}
   |        ^^^^^^^^^^

error[E0600]: cannot apply unary operator `-` to type `bool`
  --> $DIR/disallowed-positions.rs:38:8
   |
LL |     if -let 0 = 0 {}
   |        ^^^^^^^^^^ cannot apply unary operator `-`
   |
   = note: an implementation of `std::ops::Neg` might be missing for `bool`

error[E0277]: the trait bound `bool: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:47:8
   |
LL |     if (let 0 = 0)? {}
   |        ^^^^^^^^^^^ the trait `std::ops::Try` is not implemented for `bool`
   |
   = note: required by `std::ops::Try::into_result`

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/disallowed-positions.rs:47:8
   |
LL |     if (let 0 = 0)? {}
   |        ^^^^^^^^^^^^ cannot use the `?` operator in a function that returns `()`
   |
   = help: the trait `std::ops::Try` is not implemented for `()`
   = note: required by `std::ops::Try::from_error`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:58:8
   |
LL |     if x = let 0 = 0 {}
   |        ^^^^^^^^^^^^^
   |        |
   |        expected bool, found ()
   |        help: try comparing for equality: `x == let 0 = 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:61:8
   |
LL |     if true..(let 0 = 0) {}
   |        ^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:63:8
   |
LL |     if ..(let 0 = 0) {}
   |        ^^^^^^^^^^^^^ expected bool, found struct `std::ops::RangeTo`
   |
   = note: expected type `bool`
              found type `std::ops::RangeTo<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:65:8
   |
LL |     if (let 0 = 0).. {}
   |        ^^^^^^^^^^^^^ expected bool, found struct `std::ops::RangeFrom`
   |
   = note: expected type `bool`
              found type `std::ops::RangeFrom<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:69:12
   |
LL |     if let Range { start: _, end: _ } = true..true && false {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^   ---- this match expression has type `bool`
   |            |
   |            expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:69:8
   |
LL |     if let Range { start: _, end: _ } = true..true && false {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:73:12
   |
LL |     if let Range { start: _, end: _ } = true..true || false {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^   ---- this match expression has type `bool`
   |            |
   |            expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:73:8
   |
LL |     if let Range { start: _, end: _ } = true..true || false {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:80:12
   |
LL |     if let Range { start: F, end } = F..|| true {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found struct `std::ops::Range`
   |
   = note: expected type `fn() -> bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:80:41
   |
LL |     if let Range { start: F, end } = F..|| true {}
   |                                         ^^^^^^^ expected bool, found closure
   |
   = note: expected type `bool`
              found type `[closure@$DIR/disallowed-positions.rs:80:41: 80:48]`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:80:8
   |
LL |     if let Range { start: F, end } = F..|| true {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:88:12
   |
LL |     if let Range { start: true, end } = t..&&false {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^   - this match expression has type `bool`
   |            |
   |            expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:88:44
   |
LL |     if let Range { start: true, end } = t..&&false {}
   |                                            ^^^^^^^ expected bool, found &&bool
   |
   = note: expected type `bool`
              found type `&&bool`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:88:8
   |
LL |     if let Range { start: true, end } = t..&&false {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0277]: the trait bound `bool: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:47:8
   |
LL |     if (let 0 = 0)? {}
   |        ^^^^^^^^^^^^ the trait `std::ops::Try` is not implemented for `bool`

error[E0277]: the trait bound `{integer}: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:42:20
   |
LL |         if let 0 = 0? {}
   |                    ^ the trait `std::ops::Try` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <std::iter::LoopState<C, B> as std::ops::Try>
             <std::option::Option<T> as std::ops::Try>
             <std::result::Result<T, E> as std::ops::Try>
             <std::task::Poll<std::option::Option<std::result::Result<T, E>>> as std::ops::Try>
             <std::task::Poll<std::result::Result<T, E>> as std::ops::Try>
   = note: required by `std::ops::Try::into_result`

error[E0277]: the trait bound `{integer}: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:42:20
   |
LL |         if let 0 = 0? {}
   |                    ^^ the trait `std::ops::Try` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <std::iter::LoopState<C, B> as std::ops::Try>
             <std::option::Option<T> as std::ops::Try>
             <std::result::Result<T, E> as std::ops::Try>
             <std::task::Poll<std::option::Option<std::result::Result<T, E>>> as std::ops::Try>
             <std::task::Poll<std::result::Result<T, E>> as std::ops::Try>

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:98:11
   |
LL |     while &let 0 = 0 {}
   |           ^^^^^^^^^^ expected bool, found &bool
   |
   = note: expected type `bool`
              found type `&bool`

error[E0614]: type `bool` cannot be dereferenced
  --> $DIR/disallowed-positions.rs:102:11
   |
LL |     while *let 0 = 0 {}
   |           ^^^^^^^^^^

error[E0600]: cannot apply unary operator `-` to type `bool`
  --> $DIR/disallowed-positions.rs:104:11
   |
LL |     while -let 0 = 0 {}
   |           ^^^^^^^^^^ cannot apply unary operator `-`
   |
   = note: an implementation of `std::ops::Neg` might be missing for `bool`

error[E0277]: the trait bound `bool: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:113:11
   |
LL |     while (let 0 = 0)? {}
   |           ^^^^^^^^^^^ the trait `std::ops::Try` is not implemented for `bool`
   |
   = note: required by `std::ops::Try::into_result`

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/disallowed-positions.rs:113:11
   |
LL |     while (let 0 = 0)? {}
   |           ^^^^^^^^^^^^ cannot use the `?` operator in a function that returns `()`
   |
   = help: the trait `std::ops::Try` is not implemented for `()`
   = note: required by `std::ops::Try::from_error`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:124:11
   |
LL |     while x = let 0 = 0 {}
   |           ^^^^^^^^^^^^^
   |           |
   |           expected bool, found ()
   |           help: try comparing for equality: `x == let 0 = 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:127:11
   |
LL |     while true..(let 0 = 0) {}
   |           ^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:129:11
   |
LL |     while ..(let 0 = 0) {}
   |           ^^^^^^^^^^^^^ expected bool, found struct `std::ops::RangeTo`
   |
   = note: expected type `bool`
              found type `std::ops::RangeTo<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:131:11
   |
LL |     while (let 0 = 0).. {}
   |           ^^^^^^^^^^^^^ expected bool, found struct `std::ops::RangeFrom`
   |
   = note: expected type `bool`
              found type `std::ops::RangeFrom<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:135:15
   |
LL |     while let Range { start: _, end: _ } = true..true && false {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^   ---- this match expression has type `bool`
   |               |
   |               expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:135:11
   |
LL |     while let Range { start: _, end: _ } = true..true && false {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:139:15
   |
LL |     while let Range { start: _, end: _ } = true..true || false {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^   ---- this match expression has type `bool`
   |               |
   |               expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:139:11
   |
LL |     while let Range { start: _, end: _ } = true..true || false {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:146:15
   |
LL |     while let Range { start: F, end } = F..|| true {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found struct `std::ops::Range`
   |
   = note: expected type `fn() -> bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:146:44
   |
LL |     while let Range { start: F, end } = F..|| true {}
   |                                            ^^^^^^^ expected bool, found closure
   |
   = note: expected type `bool`
              found type `[closure@$DIR/disallowed-positions.rs:146:44: 146:51]`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:146:11
   |
LL |     while let Range { start: F, end } = F..|| true {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:154:15
   |
LL |     while let Range { start: true, end } = t..&&false {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^   - this match expression has type `bool`
   |               |
   |               expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:154:47
   |
LL |     while let Range { start: true, end } = t..&&false {}
   |                                               ^^^^^^^ expected bool, found &&bool
   |
   = note: expected type `bool`
              found type `&&bool`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:154:11
   |
LL |     while let Range { start: true, end } = t..&&false {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<bool>`

error[E0277]: the trait bound `bool: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:113:11
   |
LL |     while (let 0 = 0)? {}
   |           ^^^^^^^^^^^^ the trait `std::ops::Try` is not implemented for `bool`

error[E0277]: the trait bound `{integer}: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:108:23
   |
LL |         while let 0 = 0? {}
   |                       ^ the trait `std::ops::Try` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <std::iter::LoopState<C, B> as std::ops::Try>
             <std::option::Option<T> as std::ops::Try>
             <std::result::Result<T, E> as std::ops::Try>
             <std::task::Poll<std::option::Option<std::result::Result<T, E>>> as std::ops::Try>
             <std::task::Poll<std::result::Result<T, E>> as std::ops::Try>
   = note: required by `std::ops::Try::into_result`

error[E0277]: the trait bound `{integer}: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:108:23
   |
LL |         while let 0 = 0? {}
   |                       ^^ the trait `std::ops::Try` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <std::iter::LoopState<C, B> as std::ops::Try>
             <std::option::Option<T> as std::ops::Try>
             <std::result::Result<T, E> as std::ops::Try>
             <std::task::Poll<std::option::Option<std::result::Result<T, E>>> as std::ops::Try>
             <std::task::Poll<std::result::Result<T, E>> as std::ops::Try>

error[E0614]: type `bool` cannot be dereferenced
  --> $DIR/disallowed-positions.rs:177:5
   |
LL |     *let 0 = 0;
   |     ^^^^^^^^^^

error[E0600]: cannot apply unary operator `-` to type `bool`
  --> $DIR/disallowed-positions.rs:179:5
   |
LL |     -let 0 = 0;
   |     ^^^^^^^^^^ cannot apply unary operator `-`
   |
   = note: an implementation of `std::ops::Neg` might be missing for `bool`

error[E0277]: the trait bound `bool: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:188:5
   |
LL |     (let 0 = 0)?;
   |     ^^^^^^^^^^^ the trait `std::ops::Try` is not implemented for `bool`
   |
   = note: required by `std::ops::Try::into_result`

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/disallowed-positions.rs:188:5
   |
LL |     (let 0 = 0)?;
   |     ^^^^^^^^^^^^ cannot use the `?` operator in a function that returns `()`
   |
   = help: the trait `std::ops::Try` is not implemented for `()`
   = note: required by `std::ops::Try::from_error`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:204:10
   |
LL |     (let Range { start: _, end: _ } = true..true || false);
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^   ---- this match expression has type `bool`
   |          |
   |          expected bool, found struct `std::ops::Range`
   |
   = note: expected type `bool`
              found type `std::ops::Range<_>`

error[E0308]: mismatched types
  --> $DIR/disallowed-positions.rs:213:5
   |
LL | fn outside_if_and_while_expr() {
   |                                - help: try adding a return type: `-> &bool`
...
LL |     &let 0 = 0
   |     ^^^^^^^^^^ expected (), found &bool
   |
   = note: expected type `()`
              found type `&bool`

error[E0277]: the trait bound `bool: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:188:5
   |
LL |     (let 0 = 0)?;
   |     ^^^^^^^^^^^^ the trait `std::ops::Try` is not implemented for `bool`

error[E0277]: the trait bound `{integer}: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:183:17
   |
LL |         let 0 = 0?;
   |                 ^ the trait `std::ops::Try` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <std::iter::LoopState<C, B> as std::ops::Try>
             <std::option::Option<T> as std::ops::Try>
             <std::result::Result<T, E> as std::ops::Try>
             <std::task::Poll<std::option::Option<std::result::Result<T, E>>> as std::ops::Try>
             <std::task::Poll<std::result::Result<T, E>> as std::ops::Try>
   = note: required by `std::ops::Try::into_result`

error[E0277]: the trait bound `{integer}: std::ops::Try` is not satisfied
  --> $DIR/disallowed-positions.rs:183:17
   |
LL |         let 0 = 0?;
   |                 ^^ the trait `std::ops::Try` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <std::iter::LoopState<C, B> as std::ops::Try>
             <std::option::Option<T> as std::ops::Try>
             <std::result::Result<T, E> as std::ops::Try>
             <std::task::Poll<std::option::Option<std::result::Result<T, E>>> as std::ops::Try>
             <std::task::Poll<std::result::Result<T, E>> as std::ops::Try>

error[E0019]: constant contains unimplemented expression type
  --> $DIR/disallowed-positions.rs:224:25
   |
LL |         true && let 1 = 1
   |                         ^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/disallowed-positions.rs:224:21
   |
LL |         true && let 1 = 1
   |                     ^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/disallowed-positions.rs:230:25
   |
LL |         true && let 1 = 1
   |                         ^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/disallowed-positions.rs:230:21
   |
LL |         true && let 1 = 1
   |                     ^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/disallowed-positions.rs:236:25
   |
LL |         true && let 1 = 1
   |                         ^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/disallowed-positions.rs:236:21
   |
LL |         true && let 1 = 1
   |                     ^

error: aborting due to 115 previous errors

Some errors have detailed explanations: E0019, E0277, E0308, E0600, E0614.
For more information about an error, try `rustc --explain E0019`.
